Python script updated opefully tester calls python correctly